fix: align edit and delete buttons to the left next to status badge

--- a/src/app/pages/survey-detail/survey-detail.scss
+++ b/src/app/pages/survey-detail/survey-detail.scss
@@ -52,8 +52,9 @@
 
   &__actions {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
+    gap: 16px;
   }
 
   &__meta {
